create-new-user/tenants/user66/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user66
  labels:
    pod-security.kubernetes.io/enforce: restricted
    tenant: "user66"
